added http options to user service
